--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-21 Tue 22:56 -->
+<!-- 2022-06-21 Tue 23:13 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,14 +55,14 @@
 <div id="text-table-of-contents">
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
-<li><a href="#orga16ee70">index.nix</a></li>
+<li><a href="#orgcca67d7">index.nix</a></li>
 <li><a href="#697a3a77-89eb-4408-8cac-a5001e05daa2">index.hy</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a>
 <ul>
 <li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
 </ul>
 </li>
-<li><a href="#org8301834">makefile</a></li>
+<li><a href="#org61d8b37">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -77,9 +77,9 @@
 </div>
 </div>
 
-<div id="outline-container-orga16ee70" class="outline-2">
-<h2 id="orga16ee70">index.nix</h2>
-<div class="outline-text-2" id="text-orga16ee70">
+<div id="outline-container-orgcca67d7" class="outline-2">
+<h2 id="orgcca67d7">index.nix</h2>
+<div class="outline-text-2" id="text-orgcca67d7">
 <div class="org-src-container">
 <pre><code class="language-nix match-braces rainbow-braces">with builtins; with (import (fetchGit {
     url = "https://github.com/shadowrylander/shadowrylander";
@@ -185,7 +185,8 @@ Adapted from <a href="https://stackoverflow.com/users/180464/eric-frederich">eri
                                  "remote" True
                                  "force" True }
                 bootstrap-path (Path f"{home}/.config/yadm/bootstrap")
-                bootstrap-bin (bakery :program- bootstrap-path)
+                bootstrap-bin (do (chmod-bootstrap bootstrap-path)
+                                  (bakery :program- bootstrap-path))
                 reponame "aiern"
                 user-repo (dyes? user-repo f"{home}/{reponame}")
                 primary-repo f"{primary-home}/{reponame}"
@@ -263,8 +264,7 @@ Adapted from <a href="https://stackoverflow.com/users/180464/eric-frederich">eri
                               (make :f f"{worktree}/.emacs.d/makefile" "soft-init")))))
               (nixos-generate-config :run True)
               (if bootstrap
-                  (do (chmod-bootstrap bootstrap-path)
-                      (bootstrap-bin worktree)))
+                  (bootstrap-bin worktree))
               (if zfs-root
                   (do (.set zfs :snapdir "visible" dataset :m/run True)
                       (.inherit zfs :r True "snapdir" dataset :m/run True))))))
@@ -283,12 +283,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org6133c25">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orgb92563c">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org5ee97f7">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org398dc9a">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -417,9 +417,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-org8301834" class="outline-2">
-<h2 id="org8301834">makefile</h2>
-<div class="outline-text-2" id="text-org8301834">
+<div id="outline-container-org61d8b37" class="outline-2">
+<h2 id="org61d8b37">makefile</h2>
+<div class="outline-text-2" id="text-org61d8b37">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -449,7 +449,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-21 Tue 22:56</p>
+<p class="date">Created: 2022-06-21 Tue 23:13</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
