--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-22 Wed 02:03 -->
+<!-- 2022-06-22 Wed 02:31 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,14 +55,14 @@
 <div id="text-table-of-contents">
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
-<li><a href="#org554d8f5">index.nix</a></li>
+<li><a href="#org162dc1f">index.nix</a></li>
 <li><a href="#697a3a77-89eb-4408-8cac-a5001e05daa2">index.hy</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a>
 <ul>
 <li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
 </ul>
 </li>
-<li><a href="#org0371141">makefile</a></li>
+<li><a href="#orgc24134d">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -77,9 +77,9 @@
 </div>
 </div>
 
-<div id="outline-container-org554d8f5" class="outline-2">
-<h2 id="org554d8f5">index.nix</h2>
-<div class="outline-text-2" id="text-org554d8f5">
+<div id="outline-container-org162dc1f" class="outline-2">
+<h2 id="org162dc1f">index.nix</h2>
+<div class="outline-text-2" id="text-org162dc1f">
 <div class="org-src-container">
 <pre><code class="language-nix match-braces rainbow-braces">with builtins; with (import (fetchGit {
     url = "https://github.com/shadowrylander/shadowrylander";
@@ -199,7 +199,7 @@ Adapted from <a href="https://stackoverflow.com/users/180464/eric-frederich">eri
                 tailscale-api-command-bin (bakery (get tailscale-api-command-split 0))
                 tailscale-api-command-args (cut tailscale-api-command-split 1 None) ]
               (if import-yubikey
-                  (for [line (gpg :card-status True :m/str True :m/split "\n")]
+                  (for [line (gpg :card-status True :m/str True :m/split "\n" :m/run True)]
                        (if (in "URL" line)
                            (do (gpg :fetch (get (.split line ": ") 1))
                                (break))))
@@ -283,12 +283,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org94dc2a6">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org94f9b84">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgbbc92a6">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orga2c76a2">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -417,9 +417,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-org0371141" class="outline-2">
-<h2 id="org0371141">makefile</h2>
-<div class="outline-text-2" id="text-org0371141">
+<div id="outline-container-orgc24134d" class="outline-2">
+<h2 id="orgc24134d">makefile</h2>
+<div class="outline-text-2" id="text-orgc24134d">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -449,7 +449,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-22 Wed 02:03</p>
+<p class="date">Created: 2022-06-22 Wed 02:31</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
