--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-22 Wed 02:31 -->
+<!-- 2022-06-22 Wed 02:51 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -54,14 +54,14 @@
 <div id="text-table-of-contents">
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
-<li><a href="#org162dc1f">index.nix</a></li>
+<li><a href="#org169e620">index.nix</a></li>
 <li><a href="#697a3a77-89eb-4408-8cac-a5001e05daa2">index.hy</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a>
 <ul>
 <li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
 </ul>
 </li>
-<li><a href="#orgc24134d">makefile</a></li>
+<li><a href="#org9926b37">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -76,9 +76,9 @@
 </div>
 </div>
 
-<div id="outline-container-org162dc1f" class="outline-2">
-<h2 id="org162dc1f">index.nix</h2>
-<div class="outline-text-2" id="text-org162dc1f">
+<div id="outline-container-org169e620" class="outline-2">
+<h2 id="org169e620">index.nix</h2>
+<div class="outline-text-2" id="text-org169e620">
 <div class="org-src-container">
 <pre><code class="language-nix match-braces rainbow-braces">with builtins; with (import (fetchGit {
     url = "https://github.com/shadowrylander/shadowrylander";
@@ -198,10 +198,18 @@ Adapted from <a href="https://stackoverflow.com/users/180464/eric-frederich">eri
                 tailscale-api-command-bin (bakery (get tailscale-api-command-split 0))
                 tailscale-api-command-args (cut tailscale-api-command-split 1 None) ]
               (if import-yubikey
-                  (for [line (gpg :card-status True :m/str True :m/split "\n" :m/run True)]
-                       (if (in "URL" line)
-                           (do (gpg :fetch (get (.split line ": ") 1))
-                               (break))))
+                  (do (while True
+                             (try (print "The gnupg card status:\n")
+                                  (gpg :card-status True :m/dazzle True)
+                                  (print)
+                                  (except [e SystemError]
+                                          (print f"Sorry; your yubikey either isn't inserted or something else happened! When all set up, please press enter; in the meantime, here is the error: {(repr e)}")
+                                          (input))
+                                  (else (break))))
+                      (for [line (gpg :card-status True :m/str True :m/split "\n")]
+                           (if (in "URL" line)
+                               (do (gpg :fetch (get (.split line ": ") 1))
+                                   (break)))))
                   (if (setx gpg-key (ino? "Path to gpg private key: "))
                       (gpg :m/subcommand "import" gpg-key)
                       (raise (ValueError "Sorry; a gpg key is necessary to continue!"))))
@@ -282,12 +290,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org94f9b84">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orgb7af401">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orga2c76a2">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgd907bee">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -416,9 +424,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-orgc24134d" class="outline-2">
-<h2 id="orgc24134d">makefile</h2>
-<div class="outline-text-2" id="text-orgc24134d">
+<div id="outline-container-org9926b37" class="outline-2">
+<h2 id="org9926b37">makefile</h2>
+<div class="outline-text-2" id="text-org9926b37">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -448,7 +456,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-22 Wed 02:31</p>
+<p class="date">Created: 2022-06-22 Wed 02:51</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
