--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-22 Wed 02:51 -->
+<!-- 2022-06-22 Wed 03:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,14 +55,14 @@
 <div id="text-table-of-contents">
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
-<li><a href="#org169e620">index.nix</a></li>
+<li><a href="#org22c02ec">index.nix</a></li>
 <li><a href="#697a3a77-89eb-4408-8cac-a5001e05daa2">index.hy</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a>
 <ul>
 <li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
 </ul>
 </li>
-<li><a href="#org9926b37">makefile</a></li>
+<li><a href="#orgac858db">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -77,9 +77,9 @@
 </div>
 </div>
 
-<div id="outline-container-org169e620" class="outline-2">
-<h2 id="org169e620">index.nix</h2>
-<div class="outline-text-2" id="text-org169e620">
+<div id="outline-container-org22c02ec" class="outline-2">
+<h2 id="org22c02ec">index.nix</h2>
+<div class="outline-text-2" id="text-org22c02ec">
 <div class="org-src-container">
 <pre><code class="language-nix match-braces rainbow-braces">with builtins; with (import (fetchGit {
     url = "https://github.com/shadowrylander/shadowrylander";
@@ -207,7 +207,7 @@ Adapted from <a href="https://stackoverflow.com/users/180464/eric-frederich">eri
                                           (print f"Sorry; your yubikey either isn't inserted or something else happened! When all set up, please press enter; in the meantime, here is the error: {(repr e)}")
                                           (input))
                                   (else (break))))
-                      (for [line (gpg :card-status True :m/str True :m/split "\n")]
+                      (for [line (gpg :card-status True :m/split "\n")]
                            (if (in "URL" line)
                                (do (gpg :fetch (get (.split line ": ") 1))
                                    (break)))))
@@ -291,12 +291,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orgb7af401">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org20fa4f1">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgd907bee">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgb8704d7">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -425,9 +425,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-org9926b37" class="outline-2">
-<h2 id="org9926b37">makefile</h2>
-<div class="outline-text-2" id="text-org9926b37">
+<div id="outline-container-orgac858db" class="outline-2">
+<h2 id="orgac858db">makefile</h2>
+<div class="outline-text-2" id="text-orgac858db">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -457,7 +457,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-22 Wed 02:51</p>
+<p class="date">Created: 2022-06-22 Wed 03:20</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
