--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-22 Wed 03:20 -->
+<!-- 2022-06-22 Wed 04:01 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -54,14 +54,14 @@
 <div id="text-table-of-contents">
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
-<li><a href="#org22c02ec">index.nix</a></li>
+<li><a href="#org461c110">index.nix</a></li>
 <li><a href="#697a3a77-89eb-4408-8cac-a5001e05daa2">index.hy</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a>
 <ul>
 <li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
 </ul>
 </li>
-<li><a href="#orgac858db">makefile</a></li>
+<li><a href="#org5e0245c">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -76,9 +76,9 @@
 </div>
 </div>
 
-<div id="outline-container-org22c02ec" class="outline-2">
-<h2 id="org22c02ec">index.nix</h2>
-<div class="outline-text-2" id="text-org22c02ec">
+<div id="outline-container-org461c110" class="outline-2">
+<h2 id="org461c110">index.nix</h2>
+<div class="outline-text-2" id="text-org461c110">
 <div class="org-src-container">
 <pre><code class="language-nix match-braces rainbow-braces">with builtins; with (import (fetchGit {
     url = "https://github.com/shadowrylander/shadowrylander";
@@ -203,7 +203,7 @@ Adapted from <a href="https://stackoverflow.com/users/180464/eric-frederich">eri
                                   (gpg :card-status True :m/dazzle True)
                                   (print)
                                   (except [e SystemError]
-                                          (print f"Sorry; your yubikey either isn't inserted or something else happened! When all set up, please press enter; in the meantime, here is the error: {(repr e)}")
+                                          (print f"Sorry; either your yubikey isn't inserted or something else happened! When all set up, please press enter; in the meantime, here is the error: {(repr e)}")
                                           (input))
                                   (else (break))))
                       (for [line (gpg :card-status True :m/split "\n")]
@@ -211,9 +211,19 @@ Adapted from <a href="https://stackoverflow.com/users/180464/eric-frederich">eri
                                (do (gpg :fetch (get (.split line ": ") 1))
                                    (break)))))
                   (if (setx gpg-key (ino? "Path to gpg private key: "))
-                      (gpg :m/subcommand "import" gpg-key)
+                      (while True
+                             (try (gpg :m/subcommand "import" gpg-key)
+                                  (except [e SystemError]
+                                          (print f"Sorry; either your key could not be imported or something else happened! When all set up, please press enter; in the meantime, here is the error: {(repr e)}")
+                                          (input))
+                                  (else (break))))
                       (raise (ValueError "Sorry; a gpg key is necessary to continue!"))))
-              (| (echo (+ (.join "" (.split (get (gpg :fingerprint True gpg-key-id :m/list True) 1))) ":6:")) (gpg :import-ownertrust True))
+              (while True
+                     (try (| (echo (+ (.join "" (.split (get (gpg :fingerprint True gpg-key-id :m/list True) 1))) ":6:")) (gpg :import-ownertrust True))
+                          (except [e SystemError]
+                                  (print f"Sorry; either your key trust could not be imported or something else happened! When all set up, please press enter; in the meantime, here is the error: {(repr e)}")
+                                  (input))
+                          (else (break))))
               (if (not (or (.exists path user-repo) (len (listdir user-repo))))
                   (do (if (not (or zfs-root (iyes? "Currently using a shared dataset for your central repo, such as via `bcachefs' or `btrfs': ")))
                           (do (.mkdir (Path primary-repo) :parents True :exist-ok True)
@@ -290,12 +300,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org20fa4f1">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org21da1b0">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgb8704d7">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgbc00c0a">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -424,9 +434,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-orgac858db" class="outline-2">
-<h2 id="orgac858db">makefile</h2>
-<div class="outline-text-2" id="text-orgac858db">
+<div id="outline-container-org5e0245c" class="outline-2">
+<h2 id="org5e0245c">makefile</h2>
+<div class="outline-text-2" id="text-org5e0245c">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -456,7 +466,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-22 Wed 03:20</p>
+<p class="date">Created: 2022-06-22 Wed 04:01</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
